--- a/estilo.css
+++ b/estilo.css
@@ -123,7 +123,7 @@
     margin-bottom: 30px;
     cursor: pointer;
     display: inline-block;
-    width: 200px;
+    width: auto;
     font-weight: bold;
     text-decoration: none;
 }
